<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/TV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:layout_margin="10dp"
            android:textColor="@android:color/background_dark"/>

        <TextView
            android:id="@+id/TV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_margin="10dp"
            android:freezesText="true"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/TV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_s_score"
            android:layout_margin="10dp"
            android:textColor="@android:color/background_dark"/>

        <TextView
            android:id="@+id/TV4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:freezesText="true"
            android:layout_margin="10dp"
            android:textColor="@android:color/background_dark"/>

    </LinearLayout>

    <TextView
        android:id="@+id/displayTurn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_turn"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:freezesText="true"
        android:gravity="center_horizontal" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dice4"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:layout_margin="3dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/hold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold"
            tools:ignore="ButtonStyle"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            tools:ignore="ButtonStyle"
            android:layout_margin="3dp"/>
    </LinearLayout>



</LinearLayout>